--- a/src/main/resources/templates/corp/corp_template.html
+++ b/src/main/resources/templates/corp/corp_template.html
@@ -19,6 +19,7 @@ $(function(){
 
 <div class="corp-main-container">
 여기다가 설계하시면 됩니다.
+<a th:href="@{/goCorpInfoPage}">goCorpInfoPage</a>
 </div>
  
 <th:block th:replace="~{fragments/corpFooter :: corpFooter}"></th:block>
