--- a/src/main/resources/templates/user/tools/unemp_calculator.html
+++ b/src/main/resources/templates/user/tools/unemp_calculator.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" th:href="@{/user/tools/css/tools_header.css}" />
 <link rel="stylesheet" th:href="@{/user/tools/css/umemp_calculator.css}" />
 <style type="text/css">
-
 </style>
 <script type="text/javascript">
 $(function() {
@@ -203,8 +202,8 @@ $(function() {
 					</div>
 
 					<div class="action-buttons">
-						<button class="btn btn-calculate" id="calculateBtn">결과 복사</button>
-						<button class="btn btn-reset" id="resetBtn">초기화</button>
+						<button class="btn btn-primary">결과 복사</button>
+						<button class="btn btn-secondary">↻ 초기화</button>
 					</div>
 				</div>
 			</div>
