--- a/src/main/resources/templates/user/job_posting/job_posting_detail.html
+++ b/src/main/resources/templates/user/job_posting/job_posting_detail.html
@@ -114,7 +114,7 @@
       </div>
       <div class="company-title">
         <h4>삼성전자</h4>
-        <span><a href="/user/company_info">기업정보 보기 &gt;</a></span>
+        <span><a href="/user/job_posting/company_info">기업정보 보기 &gt;</a></span>
       </div>
     </div>
     
