--- a/src/main/resources/templates/user/job_posting/company_info.html
+++ b/src/main/resources/templates/user/job_posting/company_info.html
@@ -261,7 +261,7 @@
 <br><br>
 <div>
 <h4 id="simple-list-item-5">기업 후기</h4>
-<a href="/user/review" type="button" class="write-review-btn">자세히 보기</a>
+<a href="/user/job_posting/review" type="button" class="write-review-btn">자세히 보기</a>
 </div>
 
   </div>
