--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 			</a>
 			</div>
 			<nav class="nav-menu">
-				<a href="/user/job_posting" class="nav-item active">개발자 채용</a> <a href="/user/resume/resume_management"
+				<a href="/user/job_posting/job_posting" class="nav-item active">개발자 채용</a> <a href="/user/resume/resume_management"
 					class="nav-item">이력서</a> <a href="/user/tools/resume_coach" class="nav-item">취업 TOOL</a> <a
 					href="#" class="nav-item">고객센터</a>
 			</nav>
