--- a/src/main/resources/templates/user/resume/resume_form.html
+++ b/src/main/resources/templates/user/resume/resume_form.html
@@ -156,7 +156,9 @@ $(function(){
 	</header>
 
 	<main>
-		
+		<th:block th:each="pc : ${pcList}">
+			<div th:text="${pc.positionName}"></div>
+		</th:block>
 		<div class="main-container">
 			<div class="header-section">
 				<h1>이력서 작성</h1>
