--- a/src/main/resources/templates/login/joinCorpForm.html
+++ b/src/main/resources/templates/login/joinCorpForm.html
@@ -472,39 +472,43 @@ function openKakaoMap(){
 							</select>
             </div>
             <div class="form-group">
-                <label class="form-label">개업일</label>
-                <input type="text" name="username" class="form-input" placeholder="개업일 입력(YYYYMMDD)">
+                <label class="form-label">평균매출</label>
+                <input type="text" name="username" class="form-input" placeholder="평균매출 입력">
             </div>
             <div class="form-group">
                 <label class="form-label">평균연봉</label>
-                <input type="text" name="username" class="form-input" placeholder="개업일 입력(YYYYMMDD)">
+                <input type="text" name="username" class="form-input" placeholder="평균연봉 입력">
             </div>
             <div class="form-group">
-                <label class="form-label">개업일</label>
-                <input type="text" name="username" class="form-input" placeholder="개업일 입력(YYYYMMDD)">
+                <label class="form-label">설립년도</label>
+                <input type="text" name="username" class="form-input" placeholder="설립년도 입력(YYYYMMDD)">
             </div>
             <div class="form-group">
-                <label class="form-label">아이디</label>
+                <label class="form-label">사원수</label>
+                <input type="text" name="username" class="form-input" placeholder="사원수 입력">
+            </div>
+            <div class="form-group">
+                <label class="form-label">관리 계정 아이디</label>
                 <input type="text" name="username" class="form-input" placeholder="4~20자리 / 영문,숫자,특수문자'_'사용 가능">
             </div>
 
             <div class="form-group">
-                <label class="form-label">패스워드</label>
+                <label class="form-label">관리 계정 패스워드</label>
                 <input type="password" name="password" class="form-input" placeholder="8~16자리 / 영문대소문자, 숫자, 특수문자 조합">
             </div>
             
             <div class="form-group">
-                <label class="form-label">이름</label>
+                <label class="form-label">관리자 이름</label>
                 <input type="name" class="form-input" placeholder="이름입력">
             </div>
 
             <div class="form-group">
-            	<label class="form-label">휴대폰</label>
+            	<label class="form-label">관리자 휴대폰</label>
             	<input type="text" name="phone" class="form-input" placeholder="'-'만 빼고 숫자만 입력">
             </div>
 
             <div class="form-group">
-                <label class="form-label">이메일</label>
+                <label class="form-label">관리자 이메일</label>
                 <div class="email-container">
 	                <input type="email" class="form-input" placeholder="name@mingihire.co.kr">
 	                <button type="button" id="codeBtn" class="btn btn-primary btn-sm" >인증요청</button>
