--- a/src/main/resources/templates/login/joinCorpForm.html
+++ b/src/main/resources/templates/login/joinCorpForm.html
@@ -404,7 +404,7 @@ function openKakaoMap(){
     <div class="container">
         <h1 class="form-title">민기인력 기업회원 가입</h1>
         
-        <form id="frm">
+        <form id="frm" action="@{/corp/joinProcess}" method="post">
             <div class="form-group-corpNo">
               <label class="form-label" style="font-weight: bold;">사업자등록번호</label>
               <input type="text" id="corpNo" name="corpNo" class="form-input" placeholder="사업자 등록번호 입력(숫자 10자리)" maxlength="10">
