--- a/src/main/resources/templates/user/resume/resume_form.html
+++ b/src/main/resources/templates/user/resume/resume_form.html
@@ -166,52 +166,7 @@
 						<i class="fas fa-graduation-cap"></i> 학력
 					</div>
 					<div class="section-help-text">최신 순으로 입력해주세요</div>
-					<div class="edu-list">
-						<div class="item-box">
-							<button type="button" class="item-remove-btn">×</button>
-							<div class="row g-3">
-								<div class="col-md-4">
-									<label class="form-label">학력구분</label><select
-										class="form-select"><option selected disabled>선택해주세요</option>
-										<option>고등학교</option>
-										<option>대학(2,3년)</option>
-										<option>대학(4년)</option>
-										<option>대학원(석사)</option>
-										<option>대학원(박사)</option></select>
-								</div>
-								<div class="col-md-4">
-									<label class="form-label">학교명</label><input type="text"
-										class="form-control" placeholder="○○대학교">
-								</div>
-								<div class="col-md-4">
-									<label class="form-label">학과</label><input type="text"
-										class="form-control" placeholder="컴퓨터공학과">
-								</div>
-								<div class="col-md-2">
-									<label class="form-label">입학 날짜</label><input type="text"
-										class="form-control" placeholder="YYYY.MM">
-								</div>
-								<div class="col-md-2">
-									<label class="form-label">졸업날짜(예정)</label><input type="text"
-										class="form-control" placeholder="YYYY.MM">
-								</div>
-								<div class="col-md-2">
-									<label class="form-label">학점</label><input type="text"
-										class="form-control" placeholder="예: 3.5">
-								</div>
-								<div class="col-md-2">
-									<label class="form-label">기준학점</label><select
-										class="form-select"><option selected disabled>선택해주세요</option>
-										<option>4.5</option>
-										<option>4.3</option>
-										<option>4.0</option>
-										<option>5.0</option>
-										<option>7.0</option>
-										<option>100</option></select>
-								</div>
-							</div>
-						</div>
-					</div>
+					<div class="edu-list"></div>
 
 					<button class="add-btn" id="add-edu">
 						<i class="fas fa-plus"></i> 학력 추가
@@ -259,15 +214,11 @@
 					<div class="section-title">
 						<i class="fas fa-pen-fancy"></i> 자기소개서
 					</div>
-					<div class="mb-3">
-						<label class="form-label">제목</label> <input type="text"
-							class="form-control" placeholder="자기소개서 제목을 입력해주세요">
-					</div>
-					<div class="mb-3">
-						<label class="form-label">내용</label>
-						<textarea class="form-control" rows="8"
-							placeholder="자기소개 내용을 입력해주세요"></textarea>
-					</div>
+					<div class="section-help-text">자신을 소개하는 글을 입력해주세요</div>
+					<div class="intro-list"></div>
+					<button class="add-btn" id="add-intro">
+						<i class="fas fa-plus"></i> 자기소개서 추가
+					</button>
 				</div>
 
 				<!-- 새로운 버튼 그룹 -->
