--- a/src/main/resources/templates/user/resume/resume_form.html
+++ b/src/main/resources/templates/user/resume/resume_form.html
@@ -123,7 +123,7 @@
 					</div>
 					<div class="mb-3">
 						<div id="skills" class="mt-3"></div>
-						<div class="custom-select" id="positionSelect">
+						<div class="custom-select" id="skillsSelect">
 							<input type="text" class="form-control" id="skill-input"
 								placeholder="예: JavaScript, React, Node.js">
 							<ul class="custom-options" id="skillsList">
